# elevator

./: .buildinfo  .gitignore  Makefile  index.html  objects.inv  pyproject.toml  readme.rst  searchindex.js
.github/workflows/: publish.yml
_sources/: esli-v-lifte-temno.rst.txt  index.rst.txt  kak-podozhdat-cheloveka.rst.txt  kak-rabotaet-lift.rst.txt  pervaya-poezdka.rst.txt  poezdka-s-zhivotnym.rst.txt  technicheskie-harakteristiki.rst.txt
bezopasnost/: index.html
esli-lift-hlopaet-dveryami/: index.html
esli-lift-ostanovilsya/: index.html
esli-lift-zastryal/: index.html
esli-v-lifte-temno/: index.html
esli-vy-uronili-kluchi/: index.html
genindex/: index.html
kak-perevezti-mebel/: index.html
kak-podozhdat-cheloveka/: index.html
kak-rabotaet-lift/: index.html
kak-soobshit-o-probleme/: index.html
luchshe-ne-nado/: index.html
pervaya-poezdka/: index.html
poezdka-s-rebenkom/: index.html
poezdka-s-zhivotnym/: index.html
poputchiki/: index.html
pri-pozhare/: index.html
search/: index.html
slovarik/: index.html
source/: bezopasnost.rst  conf.py  esli-lift-hlopaet-dveryami.rst  esli-lift-ostanovilsya.rst  esli-lift-zastryal.rst  esli-v-lifte-temno.rst  esli-vy-uronili-kluchi.rst  index.rst  kak-perevezti-mebel.rst  kak-podozhdat-cheloveka.rst  kak-soobshit-o-probleme.rst  luchshe-ne-nado.rst  poezdka-s-rebenkom.rst  poputchiki.rst  pri-pozhare.rst  slovarik.rst  spravka.rst
spravka/: index.html
technicheskie-harakteristiki/: index.html
