[tool.poetry]
name = "elevator"
version = "2020.11.0"
description = ""
authors = ["Nick Volynkin <nick.volynkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sphinx = "^3.3.1"
sphinx-autobuild = "^2020.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
